force-app/main/default/objects/proposal_products_expected_profit__c/proposal_products_expected_profit__c.object-meta.xml
<CustomObject>
    <label>提案商品カテゴリ別_期待収益</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>提案商品カテゴリ別_期待収益名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>