force-app/main/default/objects/proposal_products_expected_profit__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>