force-app/main/default/objects/proposal_products_expected_profit__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <length>225</length>
    <type>Text</type>
</CustomField>