force-app/main/default/objects/proposal_products_expected_profit__c/fields/FirstEstimates__c.field-meta.xml
<CustomField>
    <fullName>FirstEstimates__c</fullName>
    <label>初回見積提出日</label>
    <type>Date</type>
</CustomField>