force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_AccountType__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountType__c</fullName>
    <label>顧客種別</label>
    <length>225</length>
    <type>Text</type>
</CustomField>