force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_ExpectedRevenue_Actual__c.field-meta.xml
<CustomField>
    <fullName>JU_ExpectedRevenue_Actual__c</fullName>
    <label>期待収益_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>