force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_F_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>JU_F_Accuracy__c</fullName>
    <label>F確度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>