force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_ProposedProduct__c.field-meta.xml
<CustomField>
    <fullName>JU_ProposedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>提案商品</label>
    <referenceTo>JU_ProposedProduct__c</referenceTo>
    <relationshipLabel>提案商品カテゴリ別_期待収益</relationshipLabel>
    <relationshipName>JU_ProposedProduct_proposal_products</relationshipName>
    <type>Lookup</type>
</CustomField>