force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_reort__c.field-meta.xml
<CustomField>
    <fullName>JU_reort__c</fullName>
    <label>担当部署_JU_reort</label>
    <length>36</length>
    <type>Text</type>
</CustomField>