force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_Stop_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>JU_Stop_Accuracy__c</fullName>
    <label>状況確度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>