force-app/main/default/objects/proposal_products_expected_profit__c/fields/JU_teitaimeisai__c.field-meta.xml
<CustomField>
    <fullName>JU_teitaimeisai__c</fullName>
    <label>状況明細</label>
    <length>225</length>
    <type>Text</type>
</CustomField>