force-app/main/default/objects/proposal_products_expected_profit__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>提案商品カテゴリ別_期待収益</relationshipLabel>
    <relationshipName>opportunity_proposal</relationshipName>
    <type>Lookup</type>
</CustomField>