force-app/main/default/objects/proposal_products_expected_profit__c/fields/OppOwner__c.field-meta.xml
<CustomField>
    <fullName>OppOwner__c</fullName>
    <label>商談所有者</label>
    <length>225</length>
    <type>Text</type>
</CustomField>