force-app/main/default/objects/proposal_products_expected_profit__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>フェーズ</label>
    <length>225</length>
    <type>Text</type>
</CustomField>